--- a/force-app/main/default/lwc/communityConversationNote/communityConversationNote.css
+++ b/force-app/main/default/lwc/communityConversationNote/communityConversationNote.css
@@ -1,22 +1,3 @@
-.header {
-    text-align: center;
-    margin-bottom: 3rem;
-}
-
-.panel-custom {
-    background-color: #fff;
-    display: block;
-    border-radius: 4px;
-    padding: 2.5rem;
-    padding-bottom: 0px;
-    font-size: 1.125rem;
-}
-
-.wrapper {
-    margin-top: 3rem;
-    margin-bottom: 3rem;
-}
-
 .linebreaks {
     white-space: pre-wrap;
 }
@@ -24,16 +5,10 @@
 .inline-block {
     display: block;
     padding-bottom: 0.5rem;
-}
-
-.grey-border {
-    border-color: #b0b0b0;
-}
-
-.thick {
     font-weight: bold;
 }
 
-.big-gap {
-    padding-bottom: 4.5rem;
+.conv-note-container {
+    margin-top: var(--a-spacing-10);
+    margin-bottom: var(--a-spacing-18);
 }
