--- a/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.css
+++ b/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.css
@@ -1,6 +1,6 @@
 .survey-container,
 .info-text {
-    margin-bottom: var(--a-spacing-10);
+    margin: 0 var(--a-spacing-3) var(--a-spacing-10) var(--a-spacing-3);
 }
 
 .survey-span {
