--- a/force-app/main/default/lwc/stoMedskrivSamtykke/stoMedskrivSamtykke.css
+++ b/force-app/main/default/lwc/stoMedskrivSamtykke/stoMedskrivSamtykke.css
@@ -4,5 +4,5 @@
 
 .navds-panel {
     padding: 0;
-    margin-bottom: var(--a-spacing-10);
+    margin: 0 var(--a-spacing-3) var(--a-spacing-10) var(--a-spacing-3);
 }
