--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.css
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.css
@@ -1,5 +1,5 @@
 .header {
-    text-align: center;
+    text-align: left;
 }
 .ficon {
     vertical-align: middle;
@@ -7,7 +7,7 @@
 }
 .subheader {
     margin-bottom: 1rem;
-    margin-top: 3rem;
+    margin-top: 2rem;
 }
 .inboxwrapper {
     margin-bottom: 3rem;
@@ -17,16 +17,13 @@
     line-height: 1.375;
     color: var(--navds-color-text-primary);
     font-size: 1.125rem;
-    text-align: center;
+    text-align: left;
+    padding-top: 1.25rem;
 }
 
 .centerInfobox {
     width: 65%;
     margin: auto;
-}
-
-.aroundGap {
-    margin: 1rem;
 }
 
 @media only screen and (max-width: 1023px) {
