--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.css
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.css
@@ -20,7 +20,7 @@
 .messagebox {
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 1;
+    -webkit-line-clamp: 2;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: pre-line;
@@ -32,6 +32,10 @@
     border-top-right-radius: var(--override-border-top-right-radius, 4px) !important;
     border-bottom-right-radius: var(--override-border-bottom-right-radius, 4px) !important;
     border-bottom-left-radius: var(--override-border-bottom-left-radius, 4px) !important;
+}
+
+.tag-spacing {
+    margin-right: 0.5rem;
 }
 
 .centerCircle {
