--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.css
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.css
@@ -18,6 +18,9 @@
     background-color: #f2f3f5;
     border-radius: 5px;
     display: block;
+    margin-bottom: 1rem;
+    color: #3e3832;
+    text-decoration: none;
 }
 
 @media only screen and (max-width: 480px) {
