--- a/force-app/main/default/lwc/nksChatView/nksChatView.css
+++ b/force-app/main/default/lwc/nksChatView/nksChatView.css
@@ -12,3 +12,7 @@
 .modal-header {
     margin-top: var(--a-spacing-12);
 }
+
+.container {
+    margin: 0 var(--a-spacing-3) var(--a-spacing-12) var(--a-spacing-3);
+}
