--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.css
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.css
@@ -1,43 +1,27 @@
 .header {
-    text-align: center;
-}
-.ficon {
-    vertical-align: middle;
-    margin: auto;
-}
-.subheader {
-    margin-bottom: 1rem;
-    margin-top: 3rem;
-}
-.inboxwrapper {
-    margin-bottom: 3rem;
-}
-.body {
-    font-family: var(--navds-font-family);
-    line-height: 1.375;
-    color: var(--navds-color-text-primary);
-    font-size: 1.125rem;
-    text-align: center;
+    margin-bottom: var(--a-spacing-8);
 }
 
-.centerInfobox {
+.subheader {
+    margin-bottom: var(--a-spacing-1);
+    margin-top: var(--a-spacing-8);
+}
+
+.inbox-wrapper {
+    margin: 0 var(--a-spacing-3) var(--a-spacing-12) var(--a-spacing-3);
+}
+
+.body {
+    margin-top: var(--a-spacing-5);
+}
+
+.center-info-box {
     width: 65%;
     margin: auto;
 }
 
-.aroundGap {
-    margin: 1rem;
-}
-
-@media only screen and (max-width: 1023px) {
-    .mobil-padding {
-        padding-left: 1rem;
-    }
-}
-
-@media only screen and (max-width: 480px) {
-    .horizontalMargin-mobile {
-        margin-left: 0.5rem;
-        margin-right: 0.5rem;
-    }
+.inbox-list {
+    display: flex;
+    flex-direction: column;
+    gap: var(--a-spacing-4);
 }
