--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.css
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.css
@@ -1,67 +1,33 @@
-.typo-undertittel {
+.panel {
+    background-color: var(--a-surface-subtle);
+    display: block;
+    padding: var(--a-spacing-3);
+    color: #262626;
+    text-decoration: none;
 }
-.dialog {
-    margin-bottom: 8px !important;
+
+.panel:hover {
+    background-color: var(--a-surface-neutral-subtle);
 }
-.unread {
-    border-left: 0.5em solid #0067c5 !important;
-}
-.read {
-    border-style: hidden hidden hidden solid;
-    border-width: 0.5em;
-    border-color: #ffffff;
-}
-.greenfont {
-    color: #06893a;
-}
-.iconclass:hover .iconcolor {
-    filter: invert(26%) sepia(90%) saturate(1799%) hue-rotate(191deg) brightness(92%) contrast(106%);
-}
-.messagebox {
+
+.message-box {
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 1;
+    -webkit-line-clamp: 2;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: pre-line;
     word-break: break-word;
 }
 
-.overrides {
-    border-top-left-radius: var(--override-border-top-left-radius, 4px) !important;
-    border-top-right-radius: var(--override-border-top-right-radius, 4px) !important;
-    border-bottom-right-radius: var(--override-border-bottom-right-radius, 4px) !important;
-    border-bottom-left-radius: var(--override-border-bottom-left-radius, 4px) !important;
+.tag-spacing {
+    margin-right: 0.5rem;
 }
 
-.centerCircle {
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    border-radius: 100%;
-    background-color: #f1f1f1;
-    width: 100%;
-    max-width: 48px;
-    aspect-ratio: 1 / 1;
+.no-bottom-radius {
+    border-radius: 0.5rem 0.5rem 0 0;
 }
 
-@media only screen and (max-width: 480px) {
-    .hideMobile {
-        display: none;
-    }
-
-    .dialog {
-        padding-bottom: var(--override-padding-bottom-mobile, 1rem) !important;
-    }
-
-    .threeLinesMobile {
-        -webkit-line-clamp: 3;
-    }
-    .mobilePadding {
-        padding-left: 0.5rem;
-    }
+.border-radius {
+    border-radius: 0.5rem;
 }
