--- a/force-app/main/default/lwc/communityThreadViewer/communityThreadViewer.css
+++ b/force-app/main/default/lwc/communityThreadViewer/communityThreadViewer.css
@@ -14,3 +14,24 @@
 .container {
     margin: 0 var(--a-spacing-3);
 }
+
+.subtitle {
+    margin: var(--a-spacing-8) 0 var(--a-spacing-5) 0;
+}
+
+.close-button {
+    margin-bottom: var(--a-spacing-7);
+}
+
+.end-dialogue-container {
+    border-bottom: solid 1px #838c9a;
+    margin-bottom: var(--a-spacing-3);
+}
+
+.spinner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: var(--a-spacing-5);
+}
