--- a/force-app/main/default/lwc/communityConversationNote/communityConversationNote.css
+++ b/force-app/main/default/lwc/communityConversationNote/communityConversationNote.css
@@ -1,14 +1,21 @@
-.linebreaks {
+.line-breaks {
     white-space: pre-wrap;
-}
-
-.inline-block {
-    display: block;
-    padding-bottom: 0.5rem;
-    font-weight: bold;
 }
 
 .conv-note-container {
     margin-top: var(--a-spacing-10);
-    margin-bottom: var(--a-spacing-18);
+}
+
+.navds-chat__bubble {
+    --ac-chat-bubble-bg: var(--a-surface-action-subtle);
+    padding-top: var(--a-spacing-6);
+}
+
+.navds-detail,
+.border {
+    margin: var(--a-spacing-2) 0;
+}
+
+.border {
+    border-bottom: 1px solid var(--a-border-default);
 }
