fixed some problems after test

--- a/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.css
+++ b/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.css
@@ -1,6 +1,9 @@
 .survey-container,
 .info-text {
-    margin: 0 var(--a-spacing-3) var(--a-spacing-10) var(--a-spacing-3);
+    margin-bottom: var(--a-spacing-20);
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 640px;
 }
 
 .survey-span {
