--- a/force-app/main/default/lwc/communityConversationNote/communityConversationNote.css
+++ b/force-app/main/default/lwc/communityConversationNote/communityConversationNote.css
@@ -3,7 +3,7 @@
 }
 
 .conv-note-container {
-    margin: var(--a-spacing-10) 0 var(--a-spacing-12) 0;
+    margin-top: var(--a-spacing-10);
 }
 
 .navds-chat__bubble {
@@ -23,4 +23,11 @@
 
 .navds-list__item {
     padding-left: var(--a-spacing-2);
+}
+
+.main-container {
+    margin-bottom: var(--a-spacing-20);
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 640px;
 }
