--- a/force-app/main/default/lwc/communityThreadViewer/communityThreadViewer.css
+++ b/force-app/main/default/lwc/communityThreadViewer/communityThreadViewer.css
@@ -12,7 +12,9 @@
 }
 
 .container {
-    margin: 0 var(--a-spacing-3);
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 640px;
 }
 
 .subtitle {
