--- a/force-app/main/default/lwc/stoEndDialogueModal/stoEndDialogueModal.css
+++ b/force-app/main/default/lwc/stoEndDialogueModal/stoEndDialogueModal.css
@@ -1,3 +1,9 @@
 .navds-modal__body {
     padding-top: 0;
 }
+
+@media only screen and (max-width: 576px) {
+    .button-width {
+        width: 100%;
+    }
+}
