--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.css
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.css
@@ -8,7 +8,10 @@
 }
 
 .inbox-wrapper {
-    margin: 0 var(--a-spacing-3) var(--a-spacing-12) var(--a-spacing-3);
+    margin-bottom: var(--a-spacing-20);
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 640px;
 }
 
 .body {
@@ -24,4 +27,12 @@
     display: flex;
     flex-direction: column;
     gap: var(--a-spacing-4);
+}
+
+.archive-link:active,
+.archive-link:focus {
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
+    color: var(--a-text-action);
 }
