--- a/force-app/main/default/lwc/communityConversationNote/communityConversationNote.css
+++ b/force-app/main/default/lwc/communityConversationNote/communityConversationNote.css
@@ -26,8 +26,18 @@
 }
 
 .main-container {
-    margin-bottom: var(--a-spacing-20);
-    margin-left: auto;
-    margin-right: auto;
+    margin: var(--a-spacing-05) auto var(--a-spacing-20) auto;
     max-width: 640px;
+}
+
+@media only screen and (max-width: 576px) {
+    .main-container {
+        margin-left: var(--a-spacing-3);
+        margin-right: var(--a-spacing-3);
+    }
+
+    .navds-chat__bubble {
+        min-width: 0;
+        width: 100%;
+    }
 }
