--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.css
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.css
@@ -8,9 +8,7 @@
 }
 
 .inbox-wrapper {
-    margin-bottom: var(--a-spacing-20);
-    margin-left: auto;
-    margin-right: auto;
+    margin: -0.375rem auto var(--a-spacing-20) auto;
     max-width: 640px;
 }
 
@@ -35,4 +33,11 @@
     border: none;
     box-shadow: none;
     color: var(--a-text-action);
+}
+
+@media only screen and (max-width: 576px) {
+    .inbox-wrapper {
+        margin-left: var(--a-spacing-3);
+        margin-right: var(--a-spacing-3);
+    }
 }
