--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.css
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.css
@@ -1,7 +1,7 @@
 .panel {
     background-color: var(--a-surface-subtle);
     display: block;
-    padding: var(--a-spacing-3);
+    padding: var(--a-spacing-5);
     color: #262626;
     text-decoration: none;
 }
@@ -30,4 +30,8 @@
 
 .border-radius {
     border-radius: 0.5rem;
+}
+
+.text-padding {
+    padding-bottom: var(--a-spacing-2);
 }
