--- a/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.css
+++ b/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.css
@@ -73,6 +73,10 @@
     padding-bottom: 0;
 }
 
+.spinner {
+    outline: none;
+}
+
 @media only screen and (max-width: 576px) {
     .textLeftAlign-mobile {
         text-align: left;
