--- a/force-app/main/default/lwc/communityConversationNote/communityConversationNote.css
+++ b/force-app/main/default/lwc/communityConversationNote/communityConversationNote.css
@@ -30,6 +30,10 @@
     max-width: 640px;
 }
 
+.bubble-width {
+    width: 100%;
+}
+
 @media only screen and (max-width: 576px) {
     .main-container {
         margin-left: var(--a-spacing-4);
