--- a/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.css
+++ b/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.css
@@ -1,5 +1,5 @@
 .container {
-    margin: 0 auto 0 auto;
+    margin: var(--a-spacing-5) auto var(--a-spacing-20) auto;
     max-width: 640px;
 }
 
@@ -7,11 +7,8 @@
     margin-top: var(--a-spacing-8);
 }
 
-@media only screen and (min-width: 577px) {
-    .survey-span {
-        margin-top: var(--a-spacing-4);
-        padding-left: var(--a-spacing-3);
-    }
+.survey-span {
+    margin-left: var(--a-spacing-3);
 }
 
 @media only screen and (max-width: 576px) {
@@ -26,7 +23,6 @@
     }
 
     .survey-span {
-        margin-top: var(--a-spacing-4);
-        margin-bottom: var(--a-spacing-4);
+        margin: var(--a-spacing-4) 0 var(--a-spacing-4) 0;
     }
 }
