--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.css
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.css
@@ -37,8 +37,10 @@
     padding-bottom: var(--a-spacing-2);
 }
 
-.status-container {
-    display: flex;
-    align-items: flex-end;
-    flex-direction: column;
+@media only screen and (max-width: 576px) {
+    .status-container {
+        display: flex;
+        align-items: flex-end;
+        flex-direction: column;
+    }
 }
