--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.css
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.css
@@ -20,11 +20,6 @@
     word-break: break-word;
 }
 
-.tag-spacing {
-    margin-right: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-
 .no-bottom-radius {
     border-radius: 0.5rem 0.5rem 0 0;
 }
@@ -37,10 +32,15 @@
     padding-bottom: var(--a-spacing-2);
 }
 
-@media only screen and (max-width: 576px) {
-    .status-container {
-        display: flex;
-        align-items: flex-end;
-        flex-direction: column;
-    }
+.no-wrap-date {
+    white-space: nowrap;
+    min-width: 0;
+}
+
+.status-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: flex-start;
+    gap: 0.5rem 0.5rem;
 }
