--- a/force-app/main/default/lwc/stoInboxCloseItem/stoInboxCloseItem.css
+++ b/force-app/main/default/lwc/stoInboxCloseItem/stoInboxCloseItem.css
@@ -1,6 +1,6 @@
 .end-dialogue-container {
     background-color: var(--a-surface-neutral-subtle);
-    padding: var(--a-spacing-3);
+    padding: var(--a-spacing-3) var(--a-spacing-5);
     border-radius: 0 0 0.5rem 0.5rem;
 }
 
