--- a/force-app/main/default/lwc/communityConfirmation/communityConfirmation.css
+++ b/force-app/main/default/lwc/communityConfirmation/communityConfirmation.css
@@ -11,9 +11,18 @@
     max-width: 640px;
 }
 
+.icon-container {
+    padding-right: var(--a-spacing-5);
+    text-align: right !important;
+}
+
 @media only screen and (max-width: 576px) {
     .container {
         margin-left: var(--a-spacing-4);
         margin-right: var(--a-spacing-4);
+    }
+
+    .icon-container {
+        text-align: left !important;
     }
 }
