--- a/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.css
+++ b/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.css
@@ -22,7 +22,7 @@
 .vilkar-link {
     align-self: start;
     justify-self: start;
-    border: 0px;
+    border: none;
     margin-top: 0.75rem;
     background-color: transparent;
 }
@@ -31,12 +31,13 @@
     text-decoration: none;
 }
 
+.vilkar-link:active {
+    background-color: #014486;
+}
+
 .vilkar-link:active,
-.vilkar-link:focus {
-    background-color: transparent;
-    border: none;
-    box-shadow: none;
-    color: var(--a-text-action);
+.vilkar-link:hover {
+    outline: none;
 }
 
 .spinner-container {
