--- a/force-app/main/default/lwc/communityConfirmation/communityConfirmation.css
+++ b/force-app/main/default/lwc/communityConfirmation/communityConfirmation.css
@@ -16,6 +16,18 @@
     text-align: right !important;
 }
 
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+
 @media only screen and (max-width: 576px) {
     .container {
         margin-left: var(--a-spacing-4);
