set max for bto (sto button on the top)

--- a/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.css
+++ b/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.css
@@ -10,11 +10,11 @@
 .theme-radio-button,
 .medskriv-radio-button,
 .text-area,
-.vilkar-container {
+.vilkar-container,
+.subheader {
     margin-top: var(--a-spacing-10);
 }
 
-.subtitle,
 .vilkar-container {
     margin-bottom: var(--a-spacing-10);
 }
@@ -27,17 +27,23 @@
     background-color: transparent;
 }
 
-.vilkar-link:hover {
+.vilkar-link:hover,
+.vilkar-link:focus {
     text-decoration: none;
 }
 
-.vilkar-link:active {
+.vilkar-link:active,
+.vilkar-link:focus {
     background-color: #014486;
 }
 
 .vilkar-link:active,
 .vilkar-link:hover {
     outline: none;
+}
+
+.vilkar-link:focus {
+    color: #ffffff;
 }
 
 .spinner-container {
@@ -65,24 +71,15 @@
     gap: var(--a-spacing-5);
 }
 
-.navds-modal__header {
-    margin-bottom: 0;
-    padding-bottom: 0;
-}
-
 .spinner {
     outline: none;
 }
 
+.send-sto-button {
+    margin-top: var(--a-spacing-4);
+}
+
 @media only screen and (max-width: 576px) {
-    .textLeftAlign-mobile {
-        text-align: left;
-    }
-
-    .leftMargin-mobile {
-        margin-left: 16px !important;
-    }
-
     .vilkar-container {
         flex-direction: row;
         flex-wrap: wrap;
