remove amplitude cmp as it is no longer supported in nav

--- a/force-app/main/default/aura/nksAmplitudeUtility/nksAmplitudeUtility.cmp
+++ b/force-app/main/default/aura/nksAmplitudeUtility/nksAmplitudeUtility.cmp
@@ -1,4 +1,4 @@
 <aura:component implements="flexipage:availableForAllPageTypes">
-    <c:amplitudeBackground aura:id="amplitudeBackground"></c:amplitudeBackground>
+    <!--<c:amplitudeBackground aura:id="amplitudeBackground"></c:amplitudeBackground>-->
     <c:nksGetStoUtility aura:id="stoUtility"></c:nksGetStoUtility>
 </aura:component>
